--- a/Main.ipynb
+++ b/Main.ipynb
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "data = DataLoader.dataloader(path='Stress-Predict-Dataset-main/Raw_data/', save =False) # save = Ture means don't do whole the proccess. just load the proccessed csv file that was saved before \n",
+    "data = DataLoader.dataloader(path='Raw_data/', save =False) # save = Ture means don't do whole the proccess. just load the proccessed csv file that was saved before \n",
     "dataset = data.load(fs=1) # fs = 1 means make the f of all the signals 1 Hz\n",
     "tag = data.tags() # get all the tags \n",
     "\n",
